FIX - Width needed to stop breaking on IE

--- a/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
+++ b/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
@@ -508,7 +508,8 @@ $promo-max-width:   60em;
         }
 
         section {
-            padding: 1em 1em 1em 2em ;
+            width: 100%;
+            padding: 1em 1em 1em 2em;
         }
 
         @include media( $tablet) {
